tests/tc/pos/union06.js


/*@ foo3 :: forall A B. (A, B) => (A|int) */
function foo3(x,y) {
  var a = 1;
  return x;
}



